{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 66,
  "lineage": "701bd448-3bc7-a3d1-92f4-51e26a5858f2",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/networkInterfaces/nginx-vm-nic",
            "internal_domain_name_suffix": "0d0fzysv1qru5gjxq2eqfnezpa.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/publicIPAddresses/nginx-vm-pip",
                "subnet_id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastasia",
            "mac_address": "60-45-BD-57-8E-4B",
            "name": "nginx-vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "docker-rg",
            "virtual_machine_id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Compute/virtualMachines/nginx-vm"
          },
          "dependencies": [
            "module.compute.azurerm_public_ip.vm_ip",
            "module.networking.azurerm_resource_group.rg",
            "module.networking.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/networkInterfaces/nginx-vm-nic|/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/networkSecurityGroups/nginx-vm-nsg-1",
            "network_interface_id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/networkInterfaces/nginx-vm-nic",
            "network_security_group_id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/networkSecurityGroups/nginx-vm-nsg-1"
          },
          "dependencies": [
            "module.compute.azurerm_network_interface.nic",
            "module.compute.azurerm_network_security_group.nsg",
            "module.compute.azurerm_public_ip.vm_ip",
            "module.networking.azurerm_resource_group.rg",
            "module.networking.azurerm_subnet.subnet",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/networkSecurityGroups/nginx-vm-nsg-1",
            "location": "eastasia",
            "name": "nginx-vm-nsg-1",
            "resource_group_name": "docker-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/networkSecurityGroups/nginx-vm-nsg-1/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "nginx-vm-nsg-1",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "docker-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.azurerm_network_security_group.nsg",
            "module.networking.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/networkSecurityGroups/nginx-vm-nsg-1/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "nginx-vm-nsg-1",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "docker-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.azurerm_network_security_group.nsg",
            "module.networking.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/publicIPAddresses/nginx-vm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.2.20.135",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "nginx-vm-pip",
            "resource_group_name": "docker-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet",
            "name": "dev-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "docker-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.rg",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e25cf4d0-dc55-4f23-9937-870902b49978",
            "id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "eastasia",
            "name": "dev-vnet",
            "resource_group_name": "docker-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/caf93f2a-8d99-4e53-b5cf-fcab3229fae7/resourceGroups/docker-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-subnet",
                "name": "dev-subnet"
              }
            ]
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}